# agent-replay

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
src/agent_replay/: cli.py  config.py  hooks.py  init.py  parser.py  paths.py  render.py
src/agent_replay/templates/: report.html.j2
tests/: test_cli_e2e.py  test_hooks.py  test_init_merge.py  test_parser.py  test_render.py
